--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "shell-exec": "^1.0.2",
     "shelljs": "^0.8.3",
     "yargs": "^15.3.1"
   }
